src/scss/index/page-pricing.scss
@use "../mixins";
@use "../variables";

.page-pricing {
  padding-top: 100px;

  text-align: center;

  h2 {
    @include mixins.reset;
    margin-bottom: 48px;
  }

  .pricing-container {
    @include mixins.flex(row, space-between, center);
    flex-wrap: wrap;
    row-gap: 48px;

    width: 100%;
  }

  .pricing-item {
    flex: 1 1 0;

    box-sizing: border-box;
    max-width: 370px;
    padding: 0 1.5rem;

    text-align: center;
    color: variables.$white;

    border-radius: 1rem;

    h3 {
      margin-bottom: 200px;
    }

    .pricing-value {
      @include mixins.flex(row, center, flex-start);

      margin-bottom: 40px;
    }

    .value {
      margin-right: 16px;

      line-height: 1em;
    }

    .pricing-footer {
      margin: 64px 0;
    }
  }

  .bg {
    &-free {
      background-image: url("../../assets/images/subscribe_1.png");
    }

    &-standart {
      background-image: url("../../assets/images/subscribe_2.png");
    }

    &-premium {
      background-image: url("../../assets/images/subscribe_3.png");
    }
  }

  .footer {
    margin-top: 40px;
  }
}

